--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NEWS_API_KEY=4d6c1a31ced64f36a6049353aec77f0d
-SECRET_KEY='django-insecure-_0i_jcnk&5noelv+o1*01+gv#ao1(kzvunw)=s%rr_6_rhijc='
+BACKGROUND_TASK_REFRESH_INTERVAL=3600
